# main.go
@@ -4,19 +4,14 @@ import (
 	_ "API/docs"
 	"API/internal/Storage/postrgeSQL"
 	"API/internal/config"
-	"API/internal/http-server/handlers/booking"
-	"API/internal/http-server/handlers/test"
-	"fmt"
-	httpSwagger "github.com/swaggo/http-swagger"
+	httpserver "API/internal/http-server/router"
+	"errors"
 	"log"
 	"net/http"
 	"os"
 
-	"log/slog"
-
-	"github.com/go-chi/chi"
-	"github.com/go-chi/chi/middleware"
 	"github.com/joho/godotenv"
+	"log/slog"
 )
 
 const (
@@ -25,58 +20,36 @@ const (
 	envProd  = "prod"
 )
 
-type DataBaseConfig struct {
-	Name     string
-	Password string
-	DBName   string
-	Port     string
-}
-
 func main() {
-	err := godotenv.Load()
-	if err != nil {
+	// Загрузка переменных окружения
+	if err := godotenv.Load(); err != nil {
 		log.Fatalf("Error loading .env file: %s", err)
 	}
-	checkEnvVars()
+
+	checkRequiredEnvVars()
+
+	// Загрузка конфигурации
 	cfg := config.MustLoad()
+
+	// Настройка логгера
 	logger := setupLogger(cfg.Env)
-	logger = logger.With(slog.String("env", cfg.Env)) //к каждому сообщению будет добавляться поле с информацией о текущем окружении
-	address := cfg.HTTPServer.Address
-	handlerB := booking.Handler{}
-	logger.Info("initializing server", slog.String("address", cfg.Address)) // Помимо сообщения выведем параметр с адресом
-	logger.Debug("logger debug mode enabled")
+	logger = logger.With(slog.String("env", cfg.Env))
+
+	logger.Info("Starting application", slog.String("environment", cfg.Env), slog.String("address", cfg.HTTPServer.Address))
+
+	// Настройка подключения к базе данных
 	db, err := postrgeSQL.NewDatabase(&cfg.DataBase)
 	if err != nil {
-		logger.Error("Failed to connect to database: %v", err)
+		logger.Error("Failed to connect to database", "error", err)
+		os.Exit(1)
 	}
-	if db != nil {
-		defer db.Close()
-	}
+	defer db.Close()
 
-	r := chi.NewRouter()
-	r.Use(middleware.RequestID) // Добавляет request_id в каждый запрос, для трейсинга(понимания сколько выполняется каждый запрос)
-	r.Use(middleware.Logger)
-	r.Use(middleware.Recoverer) // Если где-то внутри сервера (обработчика запроса) произойдет паника, приложение не должно упасть
-	r.Use(middleware.URLFormat) // Парсер URLов поступающих запросов
+	// Инициализация роутера
+	router := httpserver.NewRouter(cfg, logger, db)
 
-	r.Route("/book", func(r chi.Router) {
-		r.Use(middleware.BasicAuth("API", map[string]string{
-			cfg.DataBase.User: cfg.DataBase.Password,
-		}))
-
-		// сюда добавить Post соответственно
-		//насрать хендлерами для удаления и т.д.
-	}) //если не работает до вместо database ебануть HTTPServer
-
-	r.Get("/", test.GetRootHandler)
-	r.Get("/events/{event_id}", handlerB.GetEventByID)
-	r.Get("/events/", handlerB.AllEvents)
-	r.Get("/swagger/*", httpSwagger.WrapHandler)
-
-	fmt.Printf("Started server at %s\n", cfg.HTTPServer.Address)
-	if err := http.ListenAndServe(address, r); err != nil {
-		logger.Error("Error starting server: %s", err)
-	}
+	// Запуск сервера
+	startServer(cfg, router, logger)
 }
 
 func setupLogger(env string) *slog.Logger {
@@ -88,15 +61,31 @@ func setupLogger(env string) *slog.Logger {
 		logger = slog.New(slog.NewJSONHandler(os.Stdout, &slog.HandlerOptions{Level: slog.LevelDebug}))
 	case envProd:
 		logger = slog.New(slog.NewJSONHandler(os.Stdout, &slog.HandlerOptions{Level: slog.LevelInfo}))
+	default:
+		log.Fatalf("Invalid environment: %s", env)
 	}
 	return logger
 }
 
-func checkEnvVars() {
+func checkRequiredEnvVars() {
 	requiredVars := []string{"POSTGRES_USER", "POSTGRES_PASSWORD", "POSTGRES_PORT", "POSTGRES_NAME", "ENV"}
 	for _, v := range requiredVars {
 		if os.Getenv(v) == "" {
 			log.Fatalf("Environment variable %s is not set", v)
 		}
+	}
+}
+
+func startServer(cfg *config.Config, router http.Handler, logger *slog.Logger) {
+	server := &http.Server{
+		Addr:    cfg.HTTPServer.Address,
+		Handler: router,
+	}
+
+	logger.Info("HTTP server is starting", slog.String("address", cfg.HTTPServer.Address))
+
+	if err := server.ListenAndServe(); err != nil && !errors.Is(err, http.ErrServerClosed) {
+		logger.Error("Failed to start HTTP server", "error", err)
+		os.Exit(1)
 	}
 }
